yaml-tests/src/test/resources/check-result-metadata/shouldFail/wrong-struct-field-name.yamsql
#
# wrong-struct-field-name.yamsql
#
# This source file is part of the FoundationDB open source project
#
# Copyright 2015-2026 Apple Inc. and the FoundationDB project authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Failure: struct field is named "WRONG_X" in expected metadata but actual name is "X".
---
schema_template:
    CREATE TYPE AS STRUCT point(x bigint, y bigint)
    CREATE TABLE t1(id bigint, pt point, primary key(id))
---
setup:
  steps:
    - query: INSERT INTO t1 VALUES (1, (10, 20))
---
test_block:
  tests:
    -
      - query: SELECT id, pt FROM t1
      - resultMetadata:
          - {ID: BIGINT}
          - PT:
            - {WRONG_X: BIGINT}
            - {Y: BIGINT}
      - result: [{ID: 1, PT: {X: 10, Y: 20}}]
...
